hero component styling and featured posts component created

--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -10,7 +10,7 @@
         <p>Atualizações diárias</p>
       </div>
       <form class="form">
-        <input class="form-inpu" type="email" name="email" id="email" placeholder="Seu e-mail">
+        <input class="form-input" type="email" name="email" id="email" placeholder="Seu e-mail">
       </form>
       <button class="form-button">Inscrever</button>
     </div>
