--- a/src/app/pages/home/hero/hero.component.scss
+++ b/src/app/pages/home/hero/hero.component.scss
@@ -34,6 +34,7 @@
 
     p {
       font-size: 2rem;
+      margin: 0;
     }
   }
 }
@@ -41,8 +42,11 @@
 form {
   input {
     border-radius: 2rem;
-    width: 40rem;
-    height: 7rem;
+    font-size: 2rem;
+    padding: 2rem;
+    margin: 4rem 0;
+    width: 38rem;
+    height: 5rem;
   }
 }
 
