added featured posts sectionand blog card component

--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="hero-text">
     <h1>BLOG ANGULAR</h1>
-    <p>Bootcamp DIO - IFOOD</p>
+    <p>Bootcamp DIO</p>
   </div>
   <div class="hero-subscribe">
     <div class="subscribe-card">
