--- a/src/app/pages/home/hero/hero.component.scss
+++ b/src/app/pages/home/hero/hero.component.scss
@@ -1,5 +1,8 @@
 .hero {
   background-color: rgba(13, 104, 187, 0.7);
+  // background-image: url('../../../../assets/3784896.jpg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
   display: flex;
   justify-content: space-between;
   padding: 8.8rem 7.9rem;
