blog card styling

--- a/src/app/components/blog-card/blog-card.component.html
+++ b/src/app/components/blog-card/blog-card.component.html
@@ -1,13 +1,15 @@
 <div class="card-container">
-  <div>
-    <img src="" alt="capa">
-    <h2>Título</h2>
-    <p>Descrição</p>
-    <a href="">Continuar lendo....</a>
+  <div class="card-main-section">
+    <img src="https://picsum.photos/650/330.webp" alt="capa">
+    <h2>20+ Designers I Follow on Instagram today</h2>
+    <p>Want to design an app that walks and talks like a real Android app? Then look no further than Justinmind’s Android UI kit. Our Android UI kit is always up to date with the latest in Material Design trends and includes a fully shared widget library for both mobile and tablet Material Design.</p>
+    <a href="">Continuar lendo...</a>
   </div>
-  <div>
+  <div class="card-secondary-section">
     <img src="" alt="foto do autor">
-    <p>nome</p>
-    <p>data</p>
+    <span>
+      <p>nome</p>
+      <p>data</p>
+    </span>
   </div>
 </div>
