--- a/src/app/pages/home/featured-posts/featured-posts.component.html
+++ b/src/app/pages/home/featured-posts/featured-posts.component.html
@@ -1,3 +1,4 @@
-<div class="root" style="height: 500px;">
+<div class="root">
+  <app-blog-card></app-blog-card>
   <app-blog-card></app-blog-card>
 </div>
