--- a/src/app/components/blog-card/blog-card.component.scss
+++ b/src/app/components/blog-card/blog-card.component.scss
@@ -1,3 +1,56 @@
 .card-container {
-  color: #fff;
+  background-color: rgba(239, 239, 239, 0.92);
+  border-radius: 2rem;
+  width: 65rem;
+}
+
+.card-main-section {
+  border-bottom: 2px solid black;
+
+  img {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
+  h2 {
+    font-size: 3.5rem;
+    line-height: 3.5rem;
+    margin: 1rem 4rem 0 3rem;
+  }
+
+  p {
+    font-size: 2rem;
+    line-height: 2.4rem;
+    padding: 3rem 4rem 2rem 3rem;
+  }
+
+  a {
+    display: block;
+    font-size: 2.8rem;
+    text-decoration: underline;
+    line-height: 2.8rem;
+    padding: 0rem 4rem 3.5rem 3rem;
+  }
+}
+
+.card-secondary-section {
+  align-items: center;
+  display: flex;
+  gap: 2rem;
+  padding: 1.2rem 4rem 2.4rem 3rem;
+
+  img {
+    width: 6.8rem;
+    height: 6.8rem;
+    background-color: #fff;
+    border-radius: 50%;
+  }
+
+  span {
+    display: block;
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+
+
 }
