added single post page component and styling

--- a/src/app/components/blog-card/blog-card.component.html
+++ b/src/app/components/blog-card/blog-card.component.html
@@ -1,9 +1,9 @@
 <div class="card-container">
   <div class="card-main-section">
     <img src="https://picsum.photos/650/330.webp" alt="capa">
-    <h2>20+ Designers I Follow on Instagram today</h2>
-    <p>Want to design an app that walks and talks like a real Android app? Then look no further than Justinmind’s Android UI kit. Our Android UI kit is always up to date with the latest in Material Design trends and includes a fully shared widget library for both mobile and tablet Material Design.</p>
-    <a href="">Continuar lendo...</a>
+    <h2>Introduction to Angular: A Comprehensive Guide</h2>
+    <p>Angular is a popular JavaScript framework that is used to build web applications. In this article, we will explore the basics of Angular, including how it works, its key features, and how to get started with building your first Angular application. We will also cover some best practices for using Angular and share some resources to help you learn more about this powerful framework.</p>
+    <a routerLink="/post/1">Continuar lendo...</a>
   </div>
   <div class="card-secondary-section">
     <img src="" alt="foto do autor">
