--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 html {
   font-size: 62.5%;
+  background-color: rgba(239, 239, 239, 0.92);
 }
 
 * {
@@ -17,15 +18,6 @@ a {
   }
 }
 
-h1 {
-  font-size: 2.4em;
-}
-
-p {
-  font-size: 1.4em;
-}
-
 li {
-  font-size: 1.4em;
   list-style: none;
 }
