created blogposts service

--- a/src/app/pages/home/featured-posts/featured-posts.component.html
+++ b/src/app/pages/home/featured-posts/featured-posts.component.html
@@ -1,4 +1,5 @@
 <div class="root">
-  <app-blog-card></app-blog-card>
-  <app-blog-card></app-blog-card>
+  <ng-container *ngFor="let post of posts">
+    <app-blog-card [post]="post"></app-blog-card>
+  </ng-container>
 </div>
