--- a/src/app/pages/home/hero/hero.component.scss
+++ b/src/app/pages/home/hero/hero.component.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   position: relative;
   display: flex;
+  gap: 2rem;
   justify-content: space-between;
   padding: 8.8rem 7.9rem;
 
