--- a/src/app/pages/post-page/post-page.component.scss
+++ b/src/app/pages/post-page/post-page.component.scss
@@ -6,9 +6,10 @@
     margin: 0 auto;
   }
 
-  article {
+  ::ng-deep article {
     margin-top: 2rem;
     line-height: 2.8rem;
+    margin-bottom: 2.4rem;
 
     h2 {
       font-size: 3.5rem;
@@ -32,5 +33,26 @@
       padding-left: 2.5rem;
     }
 
+    pre {
+      background: #f4f4f4;
+      border: 1px solid #ddd;
+      border-left: 3px solid #f36d33;
+      color: #666;
+      page-break-inside: avoid;
+      font-family: monospace;
+      font-size: 15px;
+      line-height: 1.6;
+      margin-bottom: 1.6em;
+      max-width: 100%;
+      overflow: auto;
+      padding: 1em 1.5em;
+      display: block;
+      word-wrap: break-word;
+    }
+
+  }
+
+  .voltar {
+    font-size: 2rem;
   }
 }
