--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,6 @@
     <li><a routerLink="/">Home</a></li>
     <li><a href="#articles">Artigos</a> </li>
     <li><a href="#contact">Contato</a> </li>
-    <li><a href="#about">Sobre</a> </li>
+    <li><a routerLink="/about">Sobre</a> </li>
   </ul>
 </nav>
