--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,5 +2,8 @@
   <h2>Sobre</h2>
   <h3>Projeto criado durante o Bootcamp - Potência Tech Angular Developer - Powered by iFood</h3>
   <p>O objetivo era criar um blog baseado em algum layout existente na internet e treinar o conceito de rotas (estáticas e dinâmicas), componentes, módulos, serviços e mais presentes no framework Angular. O conteúdo dos posts foi criado pelo ChatGPT como "placeholders", visto que a ferramenta é uma forma rápida de criar conteúdo. Vale salientar que a corretude e completude do que está escrito não é garantida.</p>
+  <p>Desenvolvido com 💙 por <a href="https://www.linkedin.com/in/kermit-costa/" target="_blank">Kermit Costa</a></p>
 </div>
-<a class="voltar" routerLink="">🔙 Voltar</a>
+<span class="voltar">
+  <a routerLink="">🔙 Voltar</a>
+</span>
